font-family fix style 2

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -18,7 +18,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Bahnschrift', sans-serif;" href="/admin/inventory_add" role="button">добавить предмет</a>
+                font-family: 'Cascadia Code', sans-serif;" href="/admin/inventory_add" role="button">добавить предмет</a>
           </div>
       </div>
   </div>
@@ -31,7 +31,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Bahnschrift', sans-serif;" href="/admin/all_item" role="button">все предметы</a>
+                font-family: 'Cascadia Code', sans-serif;" href="/admin/all_item" role="button">все предметы</a>
           </div>
       </div>
   </div>
@@ -44,7 +44,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Bahnschrift', sans-serif;" href="/admin/get_user_applet" role="button">управление заявками</a>
+                font-family: 'Cascadia Code', sans-serif;" href="/admin/get_user_applet" role="button">управление заявками</a>
           </div>
       </div>
   </div>
@@ -56,7 +56,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Bahnschrift', sans-serif;" href="/buy" role="button">управление закупками</a>
+                font-family: 'Cascadia Code', sans-serif;" href="/buy" role="button">управление закупками</a>
           </div>
       </div>
   </div>
@@ -68,7 +68,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Bahnschrift', sans-serif;" href="/admin/get_logs" role="button">получение отчета</a>
+                font-family: 'Cascadia Code', sans-serif;" href="/admin/get_logs" role="button">получение отчета</a>
           </div>
       </div>
   </div>
@@ -81,7 +81,7 @@
             <div class="d-grid gap-2">
                 <button
                     class="btn btn-dark"
-                    style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;"
+                    style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code', sans-serif;"
                     id="showLogsBtn"
                     data-bs-toggle="modal"
                     data-bs-target="#reportsModal">
@@ -96,7 +96,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 style="font-family: 'Bahnschrift', sans-serif; font-size: 30px; color: red;" class="modal-title" id="reportsModalLabel">Заявки на ремонт</h5>
+                <h5 style="font-family: 'Cascadia Code', sans-serif; font-size: 30px; color: red;" class="modal-title" id="reportsModalLabel">Заявки на ремонт</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
             </div>
             <div class="modal-body">
