--- a/src/templates/logs_main.html
+++ b/src/templates/logs_main.html
@@ -37,7 +37,7 @@
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;" class="btn btn-dark">
+                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code', sans-serif;" class="btn btn-dark">
                             найти
                         </button>
                         </div>
@@ -62,7 +62,7 @@
                       <br>
                       <div class="d-grid gap-2">
                           <button type="submit" class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                            font-family: 'Bahnschrift', sans-serif;" role="button">создать отчет</button>
+                            font-family: 'Cascadia Code', sans-serif;" role="button">создать отчет</button>
                       </div>
                   </div>
               </div>
