--- a/src/templates/my_inventory.html
+++ b/src/templates/my_inventory.html
@@ -69,7 +69,7 @@
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;" class="btn btn-dark">
+                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code', sans-serif;" class="btn btn-dark">
                             отправить заявку о поломке
                         </button>
                         </div>
