--- a/src/templates/register_page.html
+++ b/src/templates/register_page.html
@@ -38,7 +38,7 @@
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;" class="btn btn-dark">
+                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code', sans-serif;" class="btn btn-dark">
                             отправить
                         </button>
                         </div>
@@ -55,7 +55,7 @@
         <div class="col-md-6">
 
             <div class="d-grid gap-2">
-                <a href="/login" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif; font-size: 15px"
+                <a href="/login" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code', sans-serif; font-size: 15px"
                         class="btn btn-dark">
                     вход
                 </a>
@@ -63,8 +63,6 @@
         </div>
     </div>
 </div>
-
-
 
     <div class="container mt-5 text-center">
         <div class="row justify-content-center">
