--- a/src/static/style.css
+++ b/src/static/style.css
@@ -26,7 +26,7 @@ body {
 
 .main_text{
     color: aquamarine;
-    font-family: 'Bahnschrift', sans-serif;
+    font-family: 'Cascadia Code', sans-serif;
     text-shadow: 0 0 10px;
 }
 
@@ -56,12 +56,12 @@ body {
     text-align: left;
     text-decoration: none;
     display: inline-flex;
-    align-items: center; /* Выравнивание по вертикали */
+    align-items: center;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
-     font-family: 'Bahnschrift', sans-serif;
+     font-family: 'Cascadia Code', monospace;
     width: 100%;
      border: none;
 }
@@ -69,27 +69,66 @@ body {
 .btn-yandex:hover {
     background-color: #333;
 }
+
 .yandex-logo {
     display: inline-flex;
      justify-content: center;
      align-items: center;
      width: 25px;
     height: 25px;
-    background-color: #ff0000; /* Красный цвет для лого */
+    background-color: #ff0000;
     color: #fff;
     font-size: 14px;
     font-weight: bold;
-    border-radius: 50%; /* Круг */
+    border-radius: 50%;
     margin-right: 10px;
 }
 
 .user-icon {
-  display: inline-flex;
-     justify-content: center;
-     align-items: center;
-     width: 25px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
     height: 25px;
-  background-color: #ddd; /* Светло-серый цвет */
-  border-radius: 50%; /* Круг */
-  margin-left: auto; /* Прижимает иконку к правому краю */
+    background-color: #ddd;
+    border-radius: 50%;
+    margin-left: auto;
+}
+
+.table {
+    background-color: #1e1e1e;
+}
+.table th {
+    background-color: #212529;
+    color: gray;
+}
+
+.form-control {
+    background-color: #2a2a2a;
+    color: #ffffff;
+}
+
+.form-control:focus {
+    background-color: #4a4a4a;
+    color: #ffffff;
+    border-color: #80bdff;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+.btn-warning {
+    background-color: #ffc107;
+    border-color: #ffc107;
+}
+
+.btn-danger {
+    background-color: #dc3545;
+    border-color: #dc3545;
 }
