--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="col-auto">
-            <a href="/logout" style="color: aquamarine;border: 3px solid aquamarine;font-family: 'Bahnschrift', sans-serif;"
+            <a href="/logout" style="color: aquamarine;border: 3px solid aquamarine;font-family: 'Cascadia Code', sans-serif;"
                role="button" class="btn btn-sm btn-dark logoutbtn">
                 <div class="main_text">
                     выход
